--- a/ProyectoFinalMoviles/app/src/main/res/layout/row_shopping_cart.xml
+++ b/ProyectoFinalMoviles/app/src/main/res/layout/row_shopping_cart.xml
@@ -9,11 +9,15 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/fondo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackground"
         app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
-        android:layout_margin="4dp">
+        app:cardElevation="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,9 +29,9 @@
                 android:id="@+id/txtSCName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:layout_marginBottom="8dp"
                 tools:text="Nombre del producto" />
 
             <LinearLayout
