--- a/ProyectoFinalMoviles/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/ProyectoFinalMoviles/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -35,18 +35,20 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/labelTotalCartQuantity"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Total de productos:" />
+                android:text="Total de productos:"
+                android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/labelTotalCartPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Precio total:" />
+                android:text="Precio total:"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -58,17 +60,21 @@
                 android:id="@+id/txtTotalCartQuantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/txtTotalCartPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
+                android:layout_weight="1" />
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Eliminar" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
