--- a/ProyectoFinalMoviles/app/src/main/res/layout/row_products.xml
+++ b/ProyectoFinalMoviles/app/src/main/res/layout/row_products.xml
@@ -23,7 +23,7 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:contentDescription="Imagen del producto"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
