--- a/ProyectoFinalMoviles/app/src/main/res/layout/activity_main.xml
+++ b/ProyectoFinalMoviles/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,28 @@
     android:paddingRight="50dp"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="216dp"
+        android:layout_height="130dp"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/cmlogoblue1___vertical" />
+
+    <TextView
+        android:id="@+id/labelError"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="Correo o contraseña incorrecta"
+        android:textColor="#FA0000"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nombre de usuario" />
+        android:text="Correo electronico" />
 
     <EditText
         android:id="@+id/txtUserName"
@@ -43,5 +60,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Button" />
+        android:text="Iniciar sesion" />
+
 </LinearLayout>
