--- a/ProyectoFinalMoviles/app/src/main/res/layout/activity_product_detail.xml
+++ b/ProyectoFinalMoviles/app/src/main/res/layout/activity_product_detail.xml
@@ -13,9 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
-        android:contentDescription="Volver"
         android:padding="8dp"
-        android:src="@android:drawable/ic_menu_close_clear_cancel"
+        android:src="@android:drawable/ic_menu_revert"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
